[build-system]
requires = ["setuptools>=82.0"]
build-backend = "setuptools.build_meta"

[project]
name = "metaheuropt"
version = "0.0.1"
authors = [
    { name="Alejandro Toro-Ossaba", email="alejotoro.o@gmail.com" },
]
description = "Reinforcement Learning for Everyone."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
keywords = ["optimization", "metaheuristic optimization", "machine learning"]
license = "MIT"
license-files = ["LICENSE*"]
dependencies = [
    "numpy>=2.2.0",
    "tqdm>=4.67.1",
    "matplotlib>=3.10.8",
    "scipy>=1.15.3",
]
[project.optional-dependencies]

[project.urls]
"Homepage" = "https://github.com/alejotoro-o/metaheuropt"
"Documentation" = "https://github.com/alejotoro-o/metaheuropt"
"Repository" = "https://github.com/alejotoro-o/metaheuropt"
"Bug Tracker" = "https://github.com/alejotoro-o/metaheuropt/issues"